# ai-for-research

./: .env.example  .gitignore  README.md  index_conf.json  pipeline.ipynb  requirements.txt
.github/instructions/: answer.instructions.md  search.instructions.md
azure-ai-search-mcp/: README.md  main.py  mcpo-config.json
azure-ai-search-mcp/azure/: app.bicep
azure-ai-search-mcp/scripts/: dev.ps1  dev.sh  dev_server.ps1  openwebui_mcp.ps1  openwebui_mcp.sh  prod.ps1  prod.sh  prod_server.ps1
azure-ai-search-mcp/tools/: hybrid_search.py  text_search.py
demo/: README.md  main.py
mcp-server/: .env.example  README.md  azure_search_client.py  main.py  prod_server.ps1  pyproject.toml
mcp-server/scripts/: dev_server.ps1  prod_server.ps1
mcp-server/tools/: __init__.py  fetch_document.py  filtered_search.py  semantic_search.py
