[project]
name = "azure-ai-search-mcp"
version = "1.0.0"
description = "MCP server for Azure AI Search with semantic, hybrid, text, and filtered search tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "azure-search-documents>=11.4.0",
    "azure-identity>=1.14.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
